src/liquid/components/ld-button/ld-button.css
ld-button {
  display: inline-flex;

  > :where(.ld-button) {
    width: 100%;
  }
}

.ld-button {
  --ld-button-icon-size-sm: 1rem;
  --ld-button-icon-size-md: 1.25rem;
  --ld-button-icon-size-lg: 1.5rem;
  --ld-button-icon-margin-x-sm: -0.125rem;
  --ld-button-icon-margin-x-md: -0.25rem;
  --ld-button-icon-margin-x-lg: -0.5rem;
  --ld-button-padding-x-sm: 0.625rem;
  --ld-button-padding-y-sm: 0.5rem;
  --ld-button-padding-x-md: 0.875rem;
  --ld-button-padding-y-md: 0.625rem;
  --ld-button-padding-x-lg: 1.3125rem;
  --ld-button-padding-y-lg: 0.75rem;
  --ld-button-gap-sm: 0.625rem;
  --ld-button-gap-md: 0.875rem;
  --ld-button-gap-lg: 1.1875rem;
  position: relative;
  font: var(--ld-typo-body-m);
  border: 0;
  padding: var(--ld-button-padding-y-md) var(--ld-button-padding-x-md);
  border-radius: var(--ld-br-m);
  min-height: 2.5rem;
  min-width: 2.5rem;
  text-decoration: none;
  user-select: none;
  touch-action: manipulation;
  color: var(--ld-col-wht);
  display: grid;
  grid-auto-flow: column;
  gap: var(--ld-button-gap-md);
  align-items: center;
  text-align: center;
  justify-content: center;
  font-weight: 700;
  line-height: 1;
  -webkit-touch-callout: none;

  &:where(:disabled),
  &:where([aria-disabled='true']) {
    opacity: 0.2;
  }

  &:where(:not(:disabled):not([aria-disabled='true'])) {
    cursor: pointer;
  }

  :where(ld-icon) {
    line-height: 0;
  }

  ld-icon,
  :where(.ld-icon),
  :where(.ld-icon svg) {
    width: var(--ld-button-icon-size-md);
    height: var(--ld-button-icon-size-md);
  }

  > ld-icon,
  > .ld-icon {
    margin: auto var(--ld-button-icon-margin-x-md);
  }

  &:where(.ld-button--sm) {
    min-height: 2rem;
    min-width: 2rem;
    padding: var(--ld-button-padding-y-sm) var(--ld-button-padding-x-sm);
    font: var(--ld-typo-body-s);
    font-weight: 700;
    line-height: 1;
    gap: var(--ld-button-gap-sm);

    > ld-icon,
    > .ld-icon {
      margin: auto var(--ld-button-icon-margin-x-sm);
    }

    ld-icon,
    .ld-icon,
    .ld-icon :where(svg) {
      width: var(--ld-button-icon-size-sm);
      height: var(--ld-button-icon-size-sm);
    }
  }

  &:where(.ld-button--lg) {
    min-height: 3.125rem;
    min-width: 3.125rem;
    padding: var(--ld-button-padding-y-lg) var(--ld-button-padding-x-lg);
    font: var(--ld-typo-body-l);
    font-weight: 700;
    line-height: 1;
    gap: var(--ld-button-gap-lg);

    > ld-icon,
    > .ld-icon {
      margin: auto var(--ld-button-icon-margin-x-lg);
    }

    ld-icon,
    .ld-icon,
    .ld-icon :where(svg) {
      width: var(--ld-button-icon-size-lg);
      height: var(--ld-button-icon-size-lg);
    }
  }

  &:where(.ld-button--align-text-right) {
    text-align: right;
  }

  &:where(.ld-button--align-text-left) {
    text-align: left;
  }

  &:where(.ld-button--justify-start) {
    justify-content: flex-start;
  }

  &:where(.ld-button--justify-end) {
    justify-content: flex-end;
  }

  &:where(.ld-button--justify-between) {
    justify-content: space-between;
  }

  &[aria-busy='true'] {
    cursor: progress;
  }
}

@keyframes ld-button-progress-pending {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(100%);
  }
}

.ld-button__progress {
  --ld-button-progress: 0;
  position: absolute;
  background-color: inherit;
  inset: auto 0 0;
  height: var(--ld-br-m);
  overflow: hidden;
  border-bottom-left-radius: var(--ld-br-full);
  border-bottom-right-radius: var(--ld-br-full);

  &::before,
  &::after {
    content: '';
    position: absolute;
    inset: 0;
  }

  &::before {
    background-color: inherit;
    filter: brightness(0.8);
  }

  &::after {
    background-color: var(--ld-button-progress-color);
    transition: transform 0.2s ease;
    transform: translateX(-100%)
      translateX(calc(var(--ld-button-progress) * 100%));
  }

  &--pending {
    &::after {
      animation: ld-button-progress-pending 1s linear infinite;
    }
  }
}

/* .ld-theme-ocean -> default */
.ld-button,
.ld-theme-ocean .ld-button,
[class*='ld-theme'] .ld-theme-ocean .ld-button {
  --ld-button-progress-color: var(--ld-thm-ocean-accent);
  background-color: var(--ld-thm-ocean-bg-primary);
  color: var(--ld-col-wht);

  &:where(:not(:disabled):not([aria-disabled='true'])) {
    &:where(:focus:focus-visible) {
      background-color: var(--ld-col-rb-focus);
      color: var(--ld-thm-ocean-bg-secondary);
    }
    @media (hover: hover) {
      &:where(:hover) {
        background-color: var(--ld-col-rb-hover);
        color: var(--ld-col-wht);
      }
    }
    &:where(:active),
    &:where(:active:focus-visible) {
      background-color: var(--ld-col-rb-active);
      color: var(--ld-col-wht);
    }
  }
}

.ld-theme-bubblegum,
[class*='ld-theme'] .ld-theme-bubblegum,
.ld-theme-shake,
[class*='ld-theme'] .ld-theme-shake,
.ld-theme-solvent,
[class*='ld-theme'] .ld-theme-solvent {
  :where(.ld-button) {
    background-color: var(--ld-thm-solvent-bg-primary);

    &:where(:not(:disabled):not([aria-disabled='true'])) {
      &:focus:focus-visible {
        background-color: var(--ld-col-rp-focus);
        color: var(--ld-thm-solvent-bg-secondary);
      }
      @media (hover: hover) {
        &:hover {
          background-color: var(--ld-col-rp-hover);
          color: var(--ld-col-wht);
        }
      }
      &:active,
      &:active:focus-visible {
        background-color: var(--ld-col-rp-active);
        color: var(--ld-col-wht);
      }
    }
  }
}

.ld-theme-bubblegum,
[class*='ld-theme'] .ld-theme-bubblegum {
  .ld-button {
    --ld-button-progress-color: var(--ld-thm-bubblegum-accent);
  }
}
.ld-theme-shake,
[class*='ld-theme'] .ld-theme-shake {
  .ld-button {
    --ld-button-progress-color: var(--ld-thm-shake-accent);
  }
}
.ld-theme-solvent,
[class*='ld-theme'] .ld-theme-solvent {
  .ld-button {
    --ld-button-progress-color: var(--ld-thm-solvent-accent);
  }
}
/* ... */

